--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -159,44 +159,51 @@
   #img2 {
     display: none;
   }
+  
   #header h1 {
     font-size: 3rem;
   }
   #header h2 {
     font-size: 1.5rem;
   }
+  #save{
+    flex-direction: row;
+    gap: 20%;
+    margin-left: -10%;
+  }
   .product {
     width: 30%;
-    min-height: 40%;
+    height: 30%;
+  }
+  .favv{
+    height: 3rem;
   }
   #img {
-    width: 40%;
+    width: 50%;
     height: 25%;
   }
   #title {
     flex-direction: column;
   }
   #name {
-    font-size: 0.8rem;
+    font-size: 0.5rem;
   }
   #brand {
-    font-size: 0.6rem;
+    font-size: 0.4rem;
   }
   #description {
     font-size: 0.3rem;
   }
+
   #price {
-    font-size: 1rem;
-  }
-  #price {
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     font-weight: bold;
   }
   .add button {
     padding: 1%;
-    height: 1.5rem;
-    width: 4rem;
-    font-size: 0.5rem;
+    height: 1rem;
+    width: 3rem;
+    font-size: 0.4rem;
   }
 
   .sections {
